<resources>
    <string name="app_name">InforMatic!</string>
    <string name="lblClientes">Clientes</string>
    <string name="lblOServicos">Ordems de Serviço</string>
    <string name="lblClientesEdt">Editar Clientes</string>
    <string name="lblClientesAdd">Adicionar Cliente</string>
    <string name="lblNome">Nome</string>
    <string name="lblTelefone">Telefone</string>
    <string name="lblEndereco">Endereço</string>
    <string name="lblEmail">E-mail</string>
    <string name="lblSalvar">Salvar</string>
    <string name="lblLimpar">Limpar</string>
    <string name="lblAdicionar">Adicionar</string>
    <string name="lblEditar">Editar</string>
    <string name="lblClientesSelecionar">Selecionar Cliente</string>
    <string name="lblServicos">Serviços</string>
    <string name="lblServicosAdd">Adicionar Serviço</string>
    <string name="lblServico">Serviço</string>
    <string name="lblValor">Valor (R$)</string>
    <string name="lblDescricao">Descrição</string>
    <string name="lblServicosSelecionar">Selecionar Serviço</string>
    <string name="lblVisualizar">Visualizar</string>
    <string name="lblOS">Ordem de Serviço</string>
    <string name="lblOSid">id -</string>
    <string name="lblCancelar">Cancelar</string>
    <string name="lblConcluir">Concluir</string>
    <string name="lblConcluirCancelar">Concluir / Cancelar OS</string>
    <string name="lblAddDelServicos">Adicionar / Remover Serviços</string>
    <string name="lblVlrZero">0,00</string>
    <string name="lblSituacao">Situação</string>
    <string name="lblEditarVisualizar">Editar / Visualizar</string>
    <string name="lblDesenvolvedores">Desenvolvedores</string>
    <string name="lblGH">github.com/brunotonia/informatic</string>
    <string name="lblAbertas">Abertas</string>
    <string name="lblConcluidas">Concluídas</string>
    <string name="lblCanceladas">Canceladas</string>
</resources>
